Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-2117

Wrong unicode character in PosixFileMgr::isRelative

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.1.4
    • 3.2.0
    • Utilities
    • None
    • iSeries / non-ASCII-systems

    Description

      In the PosixFileMgr.cpp the function PosixFileMgr::isRelative checks with

      return toCheck[0] != XMLCh('/');
      

      With other character sets (e.g. EBCDIC) the code will fail.
      The correct way would be to check with "chForwardSlash":

      return toCheck[0] != chForwardSlash;
      

      Attachments

        Activity

          People

            scantor Scott Cantor
            Victor.Horvath Victor Horvath
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: