XERCESC-2117 - Wrong unicode character in PosixFileMgr::isRelative

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1805935 13f79535-47bb-0310-9956-ffa450edef68